removed fixed height from navbar and added overflow auto.

--- a/do/brad-html-css-sass/hotel-website-basic-css-project/css/style.css
+++ b/do/brad-html-css-sass/hotel-website-basic-css-project/css/style.css
@@ -18,7 +18,7 @@ html, body {
 
 #navbar {
     background-color: coral;
-    height: 80px;
+    overflow: auto;
 }
 
 #nav-wrapper {
